--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-python-telegram-bot==20.3
-Flask==3.1.1
-gspread==5.12.0
-google-api-python-client==2.126.0
-google-auth==2.29.0
-google-auth-oauthlib==1.2.0
-httpx==0.24.1
+git add requirements.txt
+git commit -m "Fix requirements for Google + Telegram bot"
+git push origin main
